<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bottomsheet.ActionBottomSheetDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:padding="16dp"
            android:text="@string/menu"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:padding="16dp"
            android:text="@string/update_stock"
            android:textColor="@color/gray2"
            app:drawableStartCompat="@drawable/round_123_24"
            app:drawableTint="@color/gray2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray5"
            android:contentDescription="@string/cd_divider"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:padding="16dp"
            android:text="@string/update_product"
            android:textColor="@color/gray2"
            app:drawableStartCompat="@drawable/round_edit_24"
            app:drawableTint="@color/gray2" />

    </LinearLayout>

</FrameLayout>