<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="id.muhammadfaisal.mcommerce.viewmodel.InventoryViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".activity.AddProductActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:hint="@string/product_name"
                android:inputType="text"
                android:maxLength="64"
                android:text="@={viewModel.productName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:prefixText="Rp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:hint="@string/product_price"
                android:inputType="number"
                android:maxLength="20"
                android:text="@={viewModel.productPrice}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:hint="@string/product_stock"
                android:inputType="number"
                android:maxLength="5"
                android:text="@={viewModel.productStock}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:gravity="top"
                android:hint="@string/product_description"
                android:inputType="textMultiLine"
                android:maxLength="255"
                android:minLines="5"
                android:maxLines="5"
                android:text="@={viewModel.productDescription}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:hint="@string/product_image_link"
                android:inputType="text"
                android:maxLength="255"
                android:text="@={viewModel.productImage}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="8dp"
            android:layout_marginVertical="8dp"
            android:onClick="@{() -> viewModel.addInventory()}"
            android:text="@string/add_product"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:textColor="@color/white"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:id="@+id/progressIndicator"/>

    </LinearLayout>
</layout>