<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardReceipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="0dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textInvoiceNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_medium"
                android:text="@string/invoice_number"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/textInvoiceDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:text="@string/invoice_date"
                android:textColor="@color/gray3" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="@color/gray5"
                android:contentDescription="@string/cd_divider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="@color/gray5"
                android:contentDescription="@string/cd_divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_bold"
                android:gravity="end"
                android:textSize="22sp"
                android:id="@+id/textTotal"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:background="@color/gray5"
                android:contentDescription="@string/cd_divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thank_you_for_shopping"
                android:fontFamily="@font/plus_jakarta_sans_light"
                android:gravity="center"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>