<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="id.muhammadfaisal.mcommerce.viewmodel.OrderViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.HistoryActivity">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/cd_back"
            android:padding="8dp"
            android:src="@drawable/round_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:text="@string/history"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageBack" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@id/textHistory" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutInvoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/progressIndicator">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputInvoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:hint="@string/invoice_number"
                android:text="@={viewModel.invoice}"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:maxLength="18"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:text="@string/check"
            app:cornerRadius="8dp"
            android:onClick="@{() -> viewModel.findInvoice()}"
            app:layout_constraintTop_toBottomOf="@id/layoutInvoice" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/buttonCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>