<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">

    <ImageView
        android:id="@+id/imageProduct"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/cd_image_product"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:gravity="center|start"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/imageProduct"
        app:layout_constraintEnd_toStartOf="@id/imageMore"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/imageProduct"
        app:layout_constraintTop_toTopOf="@id/imageProduct">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_semibold"
            android:text="@string/label_product_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/imageProduct"
            app:layout_constraintTop_toTopOf="@id/imageProduct" />

        <TextView
            android:id="@+id/textPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:text="@string/label_product_name"
            android:textColor="@color/gray3"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageView
        android:visibility="invisible"
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/imageMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/cd_image_more"
        android:src="@drawable/round_more_vert_24"
        app:layout_constraintBottom_toBottomOf="@id/imageProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageProduct" />

</androidx.constraintlayout.widget.ConstraintLayout>