<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CartActivity">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/cd_back"
        android:padding="8dp"
        android:src="@drawable/round_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/plus_jakarta_sans_semibold"
        android:text="@string/cart"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageBack" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/textTotalAmount"
        app:layout_constraintTop_toBottomOf="@id/textHistory" />

    <TextView
        android:id="@+id/textTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:fontFamily="@font/plus_jakarta_sans_semibold"
        android:text="Rp29.000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/buttonPurchase"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPurchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/plus_jakarta_sans_medium"
        android:text="@string/purchase"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttonPurchase"
        android:indeterminate="true"
        android:id="@+id/progressBar"/>

</androidx.constraintlayout.widget.ConstraintLayout>