<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="id.muhammadfaisal.mcommerce.viewmodel.InventoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.HomeActivity">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/history"
            android:fontFamily="@font/plus_jakarta_sans_medium"
            android:textColor="@color/black"
            app:chipIcon="@drawable/round_history_24"
            app:chipCornerRadius="8dp"
            style="@style/Widget.MaterialComponents.Chip.Action"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/cart"
            android:fontFamily="@font/plus_jakarta_sans_medium"
            android:textColor="@color/black"
            app:chipIcon="@drawable/round_add_shopping_cart_24"
            app:chipCornerRadius="8dp"
            style="@style/Widget.MaterialComponents.Chip.Action"
            app:layout_constraintStart_toEndOf="@id/chipHistory"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputQuery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/round_search_24"
                android:drawablePadding="16dp"
                android:drawableTint="@color/gray4"
                android:fontFamily="@font/plus_jakarta_sans_regular"
                android:hint="@string/search_by_name"
                android:inputType="text"
                android:text="@={viewModel.search}"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipHistory" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:contentDescription="@string/cd_add"
            android:src="@drawable/round_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
