<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".bottomsheet.PlaceOrderBottomSheetDialogFragment">

    <data>

        <variable
            name="inventory"
            type="id.muhammadfaisal.mcommerce.api.response.InventoryResponse" />

        <variable
            name="viewModel"
            type="id.muhammadfaisal.mcommerce.viewmodel.OrderViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plus_jakarta_sans_semibold"
                android:text="@string/quantity"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/textTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/plus_jakarta_sans_regular"
                    android:hint="@string/quantity"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:text="@={viewModel.quantity}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPurchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/plus_jakarta_sans_semibold"
                android:letterSpacing="0.04"
                android:onClick="@{() -> viewModel.addOrderItem(true, inventory)}"
                android:text="@string/purchase"
                app:layout_constraintTop_toBottomOf="@id/layoutQuantity" />

            <com.google.android.material.button.MaterialButton
                android:visibility="gone"
                android:id="@+id/buttonCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:fontFamily="@font/plus_jakarta_sans_semibold"
                android:letterSpacing="0.04"
                android:onClick="@{() -> viewModel.addOrderItem(false, inventory)}"
                android:text="@string/add_to_cart"
                app:layout_constraintTop_toBottomOf="@id/layoutQuantity" />

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:layout_constraintTop_toBottomOf="@id/buttonPurchase" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>